# lib/db/src/schema/index.ts
@@ -1,4 +1,6 @@
+export * from "../i18n";
 export * from "./bookings";
 export * from "./vehicles";
 export * from "./blogPosts";
 export * from "./tours";
+export * from "./siteSettings";
